--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         </div>
         <div class="comentar" style="width: 350px">
             <div class='exit glyphicon glyphicon-remove'></div>
-            <div class="fb-comments" data-order-by='reverse_time' data-href="https://nzahrx.github.io/comentarios.html" data-width="300" data-numposts="20"></div>
+            <div class="fb-comments" data-order-by='reverse_time' data-href="https://nzahrx.github.io/comentarios.html" data-width="300"
+                data-numposts="20"></div>
         </div>
     </div>
 
@@ -170,7 +171,7 @@
                     <div class="botao">
                         <audio src="audio/PSEUDO BAN.mp3"></audio>
                     </div>
-                    <div class="desc">`Pseudo Ban</div>
+                    <div class="desc">Pseudo Ban</div>
                 </div>
                 <div class="back">
                     <div class="botao">
@@ -218,7 +219,7 @@
                     <div class="botao">
                         <audio src="audio/THE VOICE BRASIL.mp3"></audio>
                     </div>
-                    <div class="desc">The Voie Brasil</div>
+                    <div class="desc">The Voice Brasil</div>
                 </div>
                 <div class="back">
                     <div class="botao">
@@ -231,6 +232,36 @@
                         <audio src="audio/VEM PRO FUT.mp3"></audio>
                     </div>
                     <div class="desc">Vem pro Fut</div>
+                </div>
+                <div class="back">
+                    <div class="botao">
+                        <audio src="audio/CARALHO MOUSE.mp3"></audio>
+                    </div>
+                    <div class="desc">CARALHO MOUSE FILHA DA PUTA</div>
+                </div>
+                <div class="back">
+                    <div class="botao">
+                        <audio src="audio/VITAS.mp3"></audio>
+                    </div>
+                    <div class="desc">Só a imitação do Vitas</div>
+                </div>
+                <div class="back">
+                    <div class="botao">
+                        <audio src="audio/COMO CONQUISTAR A MORENA.mp3"></audio>
+                    </div>
+                    <div class="desc">Como conquistar a morena rapidamente</div>
+                </div>
+                <div class="back">
+                    <div class="botao">
+                        <audio src="audio/A VERDADE SOBRE HITLER.mp3"></audio>
+                    </div>
+                    <div class="desc">A verdade sobre o Hitler e Lula</div>
+                </div>
+                <div class="back">
+                    <div class="botao">
+                        <audio src="audio/CARALHO BROOOIDER.mp3"></audio>
+                    </div>
+                    <div class="desc">CARALHO BROOOOOOOOOOIDER</div>
                 </div>
             </div>
         </div>
