--- a/sobre.html
+++ b/sobre.html
@@ -31,46 +31,33 @@
 
 <body>
     <nav></nav>
-
-    <div class='exit toggleBaloes fas fa-arrow-right'></div>
-    <div class="baloes">
-        <div class="ativarTodos">Ativar todos<br><b style='color: red'>ABAIXE O VOLUME!</b></div>
-        <div>
-            <div class="naoCarregando"><a href="/comentarios.html" target="_blank">Não está carregando?</a></div>
-            <div class="toggleComentar"><i class="far fa-comments"></i> Deixe seu comentário</div>
-        </div>
-        <div class="comentar" style="width: 350px">
-            <div class='exit glyphicon glyphicon-remove'></div>
-            <div class="fb-comments" data-order-by='reverse_time' data-href="https://nzahrx.github.io/comentarios.html" data-width="300"
-                data-numposts="20"></div>
-        </div>
-    </div>
-
     <div class="container-fluid">
         <div class="row">
             <header>NZAHRX<br>MOMENTS</header>
         </div>
         <div class="row main-post">
-            <h1>Audios</h1>
+            <h1>Sobre / Crie seu site</h1>
             <div class="painel" style="background: white;">
                 <div style=" width: 600px; display: inline-block; text-align: left;">
                     Este é um site gratuito <b>Open Source</b> feito por
                     <code><a href="https://www.facebook.com/profile.php?id=100009453146844">Antony Gabriel</a></code> /
                     <a href="https://twitch.tv/obrigadopelosub__"><code style="background: purple; color: white">ObrigadoPeloSub__</code></a>                    com a finalidade de reunir os melhores momentos das streams, são diversos <b>áudios</b>, <b>GIFs</b>                    e <b>imagens</b> reunidos neste pequeno ambiente!
                     <br>
-                    <br> Qualquer <b>streamer</b> pode ter seu site, basta clicar no botão abaixo para pedir o seu e em menos de 24h o seu site é lançado
-                    para todos poderem aproveitar!
-                    <br><br> A única coisa que você precisa fazer é me enviar os Áudios/GIFs/Imagens para que eu coloque no site.
+                    <br> Qualquer <b>streamer</b> pode ter seu site, basta clicar no botão abaixo para pedir o seu e em menos
+                    de 24h o seu site é lançado para todos poderem aproveitar!
+                    <br><br> A única coisa que você precisa fazer é me enviar os Áudios/GIFs/Imagens para que eu coloque
+                    no site.
                     <br><br> Todos os sites são hospedados aqui no GitHub, que me dá um limite de 1GB de armazenamento, então
                     por isso não é possível colocar vídeos junto aos Audios/GIFs/Imagens porque consome muita memória, mas
                     já que a própria plataforma de stream permite <b>clipar</b> pedaços da stream é possível exibir esses
                     clips diretamente no site sem consumir <b>nada</b> dos servidores do GitHub. Para ter vídeos em seu site
                     é só pedir no privado para que seja adicionado uma página dedicada à vídeos.
-                    <br><br>Repito, <b>qualquer streamer</b> pode ter seu site, todo serviço é gratuito e não precisa ser um streamer grande, o serviço é para todos. ;)
+                    <br><br>Repito, <b>qualquer streamer</b> pode ter seu site, todo serviço é gratuito e não precisa ser
+                    um streamer grande, o serviço é para todos. ;)
                     <br><br>
 
                     <div style="text-align: center">
-                        <button class="btn btn-success"><a style="color: white; padding: 50; text-decoration: none" href="https://goo.gl/forms/2ukrKBk46pSOn5qB3">Peça agora o seu site!</a></button>
+                        <button class="btn btn-success"><a style="color: white; padding: 50; text-decoration: none" href="https://goo.gl/forms/2ukrKBk46pSOn5qB3" target="_blank">Peça agora o seu site!</a></button>
                     </div>
                 </div>
             </div>
@@ -81,17 +68,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script src="script.js"></script>
-
-    <div id="fb-root"></div>
-    <script>
-        (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
-            js.src = 'https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v3.2&appId=546155439142435&autoLogAppEvents=1';
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script>
 </body>
 
 </html>
