--- a/sobre.html
+++ b/sobre.html
@@ -37,7 +37,7 @@
         </div>
         <div class="row main-post">
             <h1>Sobre / Crie seu site</h1>
-            <div class="painel" style="background: white;">
+            <div class="painel" style="background: white; padding-top: 60">
                 <div style=" width: 600px; display: inline-block; text-align: left;">
                     Este é um site gratuito <b>Open Source</b> feito por
                     <code><a href="https://www.facebook.com/profile.php?id=100009453146844">Antony Gabriel</a></code> /
