--- a/sobre.html
+++ b/sobre.html
@@ -55,7 +55,13 @@
                     <br><br>Repito, <b>qualquer streamer</b> pode ter seu site, todo serviço é gratuito e não precisa ser
                     um streamer grande, o serviço é para todos. ;)
                     <br><br>
-
+                    Atualmente já existem <b>três</b> sites deste tipo e são eles: <br>
+                    <b>
+                        <a style="color: blueviolet" href="https://the-hydrogen.github.io" target="_blank">The Hydrogen</a>,
+                        <a style="color: blueviolet" href="https://mandiocaa1.github.io" target="_blank">Mandiocaa1</a>,
+                        <a style="color: blueviolet" href="https://nzahrx.github.io" target="_blank">Nzarx</a>.
+                    </b>
+                    <br><br>
                     <div style="text-align: center">
                         <button class="btn btn-success"><a style="color: white; padding: 50; text-decoration: none" href="https://goo.gl/forms/2ukrKBk46pSOn5qB3" target="_blank">Peça agora o seu site!</a></button>
                     </div>
