--- a/sobre.html
+++ b/sobre.html
@@ -37,7 +37,7 @@
         </div>
         <div class="row main-post">
             <h1>Sobre / Crie seu site</h1>
-            <div class="painel" style="background: white; padding-top: 60">
+            <div class="painel" style="background: white; padding: 60 0">
                 <div style=" width: 600px; display: inline-block; text-align: left;">
                     Este é um site gratuito <b>Open Source</b> feito por
                     <code><a href="https://www.facebook.com/profile.php?id=100009453146844">Antony Gabriel</a></code> /
@@ -54,8 +54,7 @@
                     é só pedir no privado para que seja adicionado uma página dedicada à vídeos.
                     <br><br>Repito, <b>qualquer streamer</b> pode ter seu site, todo serviço é gratuito e não precisa ser
                     um streamer grande, o serviço é para todos. ;)
-                    <br><br>
-                    Atualmente já existem <b>três</b> sites deste tipo e são eles: <br>
+                    <br><br> Atualmente já existem <b>três</b> sites deste tipo e são eles: <br>
                     <b>
                         <a style="color: blueviolet" href="https://the-hydrogen.github.io" target="_blank">The Hydrogen</a>,
                         <a style="color: blueviolet" href="https://mandiocaa1.github.io" target="_blank">Mandiocaa1</a>,
@@ -63,7 +62,7 @@
                     </b>
                     <br><br>
                     <div style="text-align: center">
-                        <button class="btn btn-success"><a style="color: white; padding: 50; text-decoration: none" href="https://goo.gl/forms/2ukrKBk46pSOn5qB3" target="_blank">Peça agora o seu site!</a></button>
+                        <button class="btn btn-success"><a style="color: white; padding: 0 50; text-decoration: none" href="https://goo.gl/forms/2ukrKBk46pSOn5qB3" target="_blank">Peça agora o seu site!</a></button>
                     </div>
                 </div>
             </div>
